# photocd-player

./: .gitignore  Cargo.toml  PhotoCDPlayer.spec  README.md  photocd_decoder.py  photocd_disc_map.py  photocd_fs_reader.py  photocd_hires.py  photocd_playlist_parse.py  rthook_cairo.py
.github/workflows/: build.yml
App Icon/: PhotoCDLogo.icns
crates/photocd-core/: Cargo.toml
crates/photocd-core/examples/: scan_library.rs
crates/photocd-core/src/: base.rs  cue.rs  disc.rs  hires.rs  huffman.rs  iso9660.rs  lib.rs  playlist.rs  reader.rs  ycc.rs
crates/photocd-decode/: Cargo.toml
crates/photocd-decode/src/: main.rs
crates/photocd-gui/: Cargo.toml  build.rs
crates/photocd-gui/src/: app.rs  archive.rs  audio.rs  main.rs
icons/: Photo CD Player - Library Logo.af  PhotoCDLogo.af  PhotoCDLogo.icns  PhotoCD_AppIcon_v2.af  PhotoCD_AppIcon_v2.icns  make_rounded_icon.py
