[package]
name = "photocd-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Photo CD Player GUI (egui)"

[[bin]]
name = "photocd-player"
path = "src/main.rs"

[dependencies]
photocd-core = { path = "../photocd-core" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
rfd = { version = "0.14", default-features = false, features = ["gtk3"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rodio = "0.19"
zip = { version = "2", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
